<resources>
    <string name="app_name">Restaurant</string>
    <string name="title_activity_mwewe_map">MweweMap</string>
    <string name="chef_name_label">Name</string>
    <string name="chef_name_description">Drake</string>
    <string name="chef_speciality">Speciality</string>
    <string name="chef_speciality_description">Meat</string>
    <string name="chef_restaurant">Restaurant</string>
    <string name="chef_restaurant_description">Simba</string>
    <string name="things_find_us">Find Us</string>
    <string name="things_our_foods">Our Foods</string>
    <string name="things_chef_of_the_month">chef of the month</string>
    <string name="find_mwewe">Mwewe</string>
    <string name="find_simba">Simba</string>
    <string name="find_chui">Chui</string>
    <string name="mwewe_contact_us">Contact Us</string>
    <string name="mwewe_our_location">Our Location</string>
    <string name="simba_contact_us">Contact Us</string>
    <string name="simba_our_location">Our Location</string>
    <string name="chui_contact_us">Contact Us</string>
    <string name="chui_our_location">Our Location</string>
    <string name="ugali_title">Ugali</string>
    <string name="ugali_served_at">Served at:</string>
    <string name="ugali_served_at_description">Simba, Chui, Mwewe</string>
    <string name="ugali_served_time">Served starting from Time:</string>
    <string name="ugali_served_time_description">13:00hrs</string>
    <string name="ugali_price">Served starting from Price:</string>
    <string name="ugali_price_description">Ksh 50</string>
    <string name="ugali_best_served_with">Best served with:</string>
    <string name="beef_title">Beef</string>
    <string name="ugali_best_served_with_description">Beef/Roastbeef/Pork/Fish</string>
    <string name="beef_served_at">Served at:</string>
    <string name="beef_served_at_descrription">Simba, Chui, Mwewe</string>
    <string name="beef_served_time">Served starting from Time:</string>
    <string name="beef_served_time_description">13:00hrs</string>
    <string name="beef_price">Served starting from Price:</string>
    <string name="beef_price_description">Ksh 120</string>
    <string name="beef_best_served_with">Best served with:</string>
    <string name="beef_best_served_with_description">Ugali/Pilau/Mukimo/Chips</string>
    <string name="rBeef_title">Roast Beef</string>
    <string name="rBeef_served_at">Served at:</string>
    <string name="rBeef_served_at_description">Simba,Mwewe</string>
    <string name="rBeef_served_time">Served starting from Time:</string>
    <string name="rBeef_served_time_description">17:00hrs</string>
    <string name="rBeef_price">Served starting from Price:</string>
    <string name="rBeef_price_description">Ksh 150</string>
    <string name="rBeef_best_served_with">Best served with:</string>
    <string name="rBeef_best_served_with_description">Ugali/Chips</string>
    <string name="pork_title">Pork</string>
    <string name="pork_served_at">Served at:</string>
    <string name="pork_served_at_description">Simba</string>
    <string name="t_pork_served_time">Served starting from Time:</string>
    <string name="pork_served_time_description">13:00hrs</string>
    <string name="pork_price">Served starting from Price:</string>
    <string name="pork_best_served_with">Best served with:</string>
    <string name="pork_best_served_with_description">Ugali/Pilau/Mukimo</string>
    <string name="chicken_title">Chicken</string>
    <string name="chicken_served_at">Served at:</string>
    <string name="chicken_served_at_description">Simba, Chui, Mwewe</string>
    <string name="chicken_served_time">Served starting from Time:</string>
    <string name="chicken_served_time_description">13:00hrs</string>
    <string name="chicken_price">Served starting from Price:</string>
    <string name="chicken_price_description">Ksh 250</string>
    <string name="chicken_best_served_with">Best served with:</string>
    <string name="chicken_best_served_with_description">Ugali/Pilau/Mukimo/Chips/Githeri</string>
    <string name="pilau_title">Pilau</string>
    <string name="pilau_served_at">Served at:</string>
    <string name="pilau_served_at_description">Simba, Chui, Mwewe</string>
    <string name="pilau_served_time">Served starting from Time:</string>
    <string name="pilau_served_time_description">13:00hrs</string>
    <string name="pilau_price">Served staring from Price:</string>
    <string name="pilau_price_description">Ksh 100</string>
    <string name="pilau_best_served_with">Best served with:</string>
    <string name="pilau_best_served_with_description">Beef/RoastBeef/Pork/Chicken/Fish</string>
    <string name="mukimo_title">Mukimo</string>
    <string name="mukimo_served_at">Served at:</string>
    <string name="mukimo_served_at_description">Simba, Chui</string>
    <string name="mukimo_served_time">Served starting from Time:</string>
    <string name="mukimo_served_time_description">13:00hrs</string>
    <string name="mukimo_price">Served starting from Price:</string>
    <string name="mukimo_price_description">Ksh 100</string>
    <string name="mukimo_best_served_with">Best served with:</string>
    <string name="mukimo_best_served_with_description">Pork/Beef/Chicken</string>
    <string name="githeri_title">Githeri</string>
    <string name="githeri_served_at">Served at:</string>
    <string name="githeri_served_at_description">Simba, Chui, Mwewe</string>
    <string name="githeri_served_time">Served starting from Time:</string>
    <string name="githeri_served_time_description">13:00hrs</string>
    <string name="githeri_served_price">Served starting from Price:</string>
    <string name="githeri_served_price_description">Ksh 80</string>
    <string name="githeri_best_served_with">Best served with:</string>
    <string name="githeri_best_served_with_description">Chicken</string>
    <string name="fish_title">Fish</string>
    <string name="fish_served_at">Served at:</string>
    <string name="fish_served_at_description">Simba, Chui, Mwewe</string>
    <string name="fish_served_time">Served starting from Time:</string>
    <string name="fish_served_time_description">14:00hrs</string>
    <string name="fish_price">Served starting from Price:</string>
    <string name="fish_price_description">Ksh 150</string>
    <string name="fish_best_served_with">Best served with:</string>
    <string name="fish_best_served_with_description">Ugali/Pilau/Chips</string>
    <string name="chips_title">Chips</string>
    <string name="chips_served_at">Served at:</string>
    <string name="chips_served_at_description">Simba,Mwewe,Chui</string>
    <string name="chips_served_time">Served starting from Time:</string>
    <string name="chips_served_time_description">10:00hrs</string>
    <string name="chips_price">Served starting from Price:</string>
    <string name="chips_price_description">Ksh 100</string>
    <string name="chips_best_served_with">Best served with:</string>
    <string name="chips_best_served_with_description">Beef/RoastBeef/Fish/Chicken</string>
</resources>