<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true"
    android:background="#ECF2F0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Fish">

        <ImageView
            android:id="@+id/imageFish"
            android:layout_width="0dp"
            android:layout_height="366dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fish" />

        <TextView
            android:id="@+id/tFishTitle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="40sp"
            android:text="@string/fish_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageFish"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tFishServedAt"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="40sp"
            android:text="@string/fish_served_at"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tFishTitle" />

        <TextView
            android:id="@+id/tFishServedAtDescription"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="25sp"
            android:text="@string/fish_served_at_description"
            app:layout_constraintTop_toBottomOf="@+id/tFishServedAt"/>

        <TextView
            android:id="@+id/tFishServedTime"
            android:layout_height="wrap_content"
            android:text="@string/fish_served_time"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="40sp"
            app:layout_constraintTop_toBottomOf="@+id/tFishServedAtDescription" />

        <TextView
            android:id="@+id/tFishServedTimeDescription"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="25sp"
            android:text="@string/fish_served_time_description"
            app:layout_constraintTop_toBottomOf="@+id/tFishServedTime" />

        <TextView
            android:id="@+id/tFishPrice"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="40sp"
            android:text="@string/fish_price"
            app:layout_constraintTop_toBottomOf="@+id/tFishServedTimeDescription" />

        <TextView
            android:id="@+id/tFishPriceDescription"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="25sp"
            android:text="@string/fish_price_description"
            app:layout_constraintTop_toBottomOf="@+id/tFishPrice" />

        <TextView
            android:id="@+id/tFishBestServedWith"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="40sp"
            android:text="@string/fish_best_served_with"
            app:layout_constraintTop_toBottomOf="@+id/tFishPriceDescription" />

        <TextView
            android:id="@+id/tFishBestServedWithDescription"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="25sp"
            android:text="@string/fish_best_served_with_description"
            app:layout_constraintTop_toBottomOf="@+id/tFishBestServedWith" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
